force-app/main/default/objects/QTB_Billing_Account_Flow_Check__mdt/QTB_Billing_Account_Flow_Check__mdt.object-meta.xml
<CustomObject>
    <description>GitLab  #14649 - Custom metadata for CPQ countries &amp; Billing only countries that will check the combination of Country, Primary Product line, Is CPQ country &amp; Old model (or) New model.</description>
    <label>QTB Billing Account Flow Check</label>
    <pluralLabel>QTB Billing Account Flow Checks</pluralLabel>
</CustomObject>