force-app/main/default/objects/QTB_Billing_Account_Flow_Check__mdt/fields/QTB_Active__c.field-meta.xml
<CustomField>
    <fullName>QTB_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>