force-app/main/default/objects/QTB_Billing_Account_Flow_Check__mdt/fields/QTB_Is_CPQ_Country__c.field-meta.xml
<CustomField>
    <fullName>QTB_Is_CPQ_Country__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is CPQ Country?</label>
    <type>Checkbox</type>
</CustomField>