force-app/main/default/objects/QTB_Billing_Account_Flow_Check__mdt/fields/QTB_Is_Old_Model__c.field-meta.xml
<CustomField>
    <fullName>QTB_Is_Old_Model__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Old Model?</label>
    <type>Checkbox</type>
</CustomField>