force-app/main/default/objects/QTB_Billing_Account_Flow_Check__mdt/fields/QTB_Primary_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>QTB_Primary_Product_Line__c</fullName>
    <description>If Primary Product Line contains multiple values, we separate the values with Semicolon.</description>
    <label>Primary Product Line</label>
    <type>TextArea</type>
</CustomField>