force-app/main/default/objects/QTB_Billing_Account_Flow_Check__mdt/listViews/My_View.listView-meta.xml
<ListView>
    <fullName>My_View</fullName>
    <columns>MasterLabel</columns>
    <columns>QTB_Country__c</columns>
    <columns>QTB_Is_CPQ_Country__c</columns>
    <columns>QTB_Is_Old_Model__c</columns>
    <columns>QTB_Primary_Product_Line__c</columns>
    <columns>QTB_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>My View</label>
    <language>en_US</language>
</ListView>